# components

./: package.json
src/aria/private/menu/: menu.spec.ts  menu.ts
src/aria/private/toolbar/: toolbar-widget-group.ts  toolbar.spec.ts
src/cdk-experimental/combobox/: combobox.ts  index.ts
src/cdk-experimental/listbox/: BUILD.bazel  listbox.ts
src/cdk-experimental/radio/: public-api.ts  radio.spec.ts  radio.ts
src/cdk-experimental/tabs/: BUILD.bazel  public-api.ts  tabs.ts
src/cdk-experimental/ui-patterns/: public-api.ts
src/cdk-experimental/ui-patterns/behaviors/: grid-selection.ts  index.ts  public-api.ts  selection-strategy.ts
src/cdk-experimental/ui-patterns/behaviors/event-manager/: event-manager.ts  keyboard-event-manager.ts  mouse-event-manager.ts
src/cdk-experimental/ui-patterns/behaviors/grid-focus/: grid-focus.spec.ts  grid-focus.ts
src/cdk-experimental/ui-patterns/behaviors/grid-navigation/: grid-navigation.spec.ts  grid-navigation.ts
src/cdk-experimental/ui-patterns/behaviors/grid-selection/: BUILD.bazel  grid-selection.spec.ts  grid-selection.ts  index.ts  public-api.ts
src/cdk-experimental/ui-patterns/behaviors/list/: list.spec.ts  list.ts
src/cdk-experimental/ui-patterns/behaviors/list-focus/: list-focus.spec.ts  list-focus.ts
src/cdk-experimental/ui-patterns/behaviors/list-navigation/: list-navigation.spec.ts  list-navigation.ts
src/cdk-experimental/ui-patterns/behaviors/list-selection/: controller.ts  list-selection.spec.ts  list-selection.ts
src/cdk-experimental/ui-patterns/behaviors/list-typeahead/: controller.ts  list-typeahead.spec.ts  list-typeahead.ts
src/cdk-experimental/ui-patterns/combobox/: combobox.ts
src/cdk-experimental/ui-patterns/event-manager/: keyboard-event-manager.ts
src/cdk-experimental/ui-patterns/grid/: BUILD.bazel  grid-cell-widget.ts  grid-cell.ts  grid-pattern.spec.ts  grid-pattern.ts  grid-types.ts
src/cdk-experimental/ui-patterns/list-focus/: BUILD.bazel  controller.ts  list-focus.spec.ts  list-focus.ts
src/cdk-experimental/ui-patterns/list-navigation/: controller.ts  list-navigation.spec.ts  list-navigation.ts
src/cdk-experimental/ui-patterns/list-selection/: BUILD.bazel  controller.ts  list-selection.spec.ts  list-selection.ts
src/cdk-experimental/ui-patterns/list-typeahead/: BUILD.bazel  controller.ts  list-typeahead.ts
src/cdk-experimental/ui-patterns/listbox/: BUILD.bazel  controller.ts  listbox.ts  option.ts
src/cdk-experimental/ui-patterns/tabs/: BUILD.bazel  controller.ts  tab.ts  tablist.ts  tabpanel.ts
src/cdk-experimental/ui-patterns/toolbar/: BUILD.bazel  toolbar.spec.ts  toolbar.ts
src/cdk/schematics/ng-update/: devkit-migration-rule.ts  find-files.ts  public-api.ts
src/components-examples/: config.bzl
src/components-examples/cdk-experimental/accordion/: cdk-accordion-examples.css  index.ts
src/components-examples/cdk-experimental/accordion/cdk-accordion-configurable/: cdk-accordion-configurable-example.html  cdk-accordion-configurable-example.ts
src/components-examples/cdk-experimental/accordion/cdk-accordion-disabled-focusable/: cdk-accordion-disabled-focusable-example.html  cdk-accordion-disabled-focusable-example.ts
src/components-examples/cdk-experimental/accordion/cdk-accordion-disabled-skipped/: cdk-accordion-disabled-skipped-example.html  cdk-accordion-disabled-skipped-example.ts
src/components-examples/cdk-experimental/accordion/cdk-accordion-multi-expansion/: cdk-accordion-multi-expansion-example.html  cdk-accordion-multi-expansion-example.ts
src/components-examples/cdk-experimental/accordion/cdk-accordion-single-expansion/: cdk-accordion-single-expansion-example.html  cdk-accordion-single-expansion-example.ts
src/components-examples/cdk-experimental/listbox/: BUILD.bazel
src/components-examples/cdk-experimental/listbox/cdk-listbox/: cdk-listbox-example.css  cdk-listbox-example.html  cdk-listbox-example.ts
src/components-examples/cdk-experimental/radio/: index.ts  radio-common.css
src/components-examples/cdk-experimental/radio/cdk-radio-active-descendant/: cdk-radio-active-descendant-example.html  cdk-radio-active-descendant-example.ts
src/dev-app/: routes.ts  theme-m3.scss
src/dev-app/cdk-experimental-accordion/: cdk-accordion-demo.css  cdk-accordion-demo.html  cdk-accordion-demo.ts
src/dev-app/cdk-experimental-radio/: cdk-radio-demo.css  cdk-radio-demo.html  cdk-radio-demo.ts
src/dev-app/mdc-slider/: BUILD.bazel  mdc-slider-demo-module.ts  mdc-slider-demo.html  mdc-slider-demo.ts
src/dev-app/performance/: BUILD.bazel  performance-demo.html  performance-demo.ts
src/e2e-app/mdc-slider/: mdc-slider-e2e.ts
src/material-experimental/mdc-slider/: BUILD.bazel  _slider-theme.scss  global-change-and-input-listener.ts  module.ts  public-api.ts  slider-adapter.ts  slider-math.ts  slider-thumb-decorator.html  slider-thumb-decorator.ts  slider-thumb-knob.ts  slider-thumb.ts  slider.e2e.spec.ts  slider.html  slider.scss  slider.spec.ts  slider.ts
src/material-experimental/mdc-slider/testing/: public-api.ts  slider-harness.spec.ts
src/material-experimental/theming/: _config-validation.scss  _definition.scss  _m3-tokens.scss
src/material/button/: _button-base.scss  _button-theme.scss  button-base.ts  button-interaction-detector.ts  button-lazy-ripple-renderer.ts  button.html  button.scss  button.ts  fab.ts  icon-button.ts  module.ts
src/material/core/option/: index.ts  option-parent.ts  option.ts
src/material/core/style/: _sass-utils.scss
src/material/core/tokens/: _m3-tokens.scss
src/material/core/tokens/m2/mdc/: _filled-button.scss
src/material/schematics/: BUILD.bazel
src/material/schematics/ng-update/: BUILD.bazel
src/material/schematics/ng-update/migrations/hammer-gestures-v9/: gesture-config-template.ts  hammer-gestures-migration.ts
src/material/schematics/ng-update/migrations/package-imports-v8/: material-symbols.ts  secondary-entry-points-migration.ts
src/material/schematics/ng-update/test-cases/misc/: class-inheritance.spec.ts
src/universal-app/kitchen-sink-mdc/: kitchen-sink-mdc.html
(+15 files in other folders)
