load("//tools:defaults.bzl", "ng_web_test_suite", "ts_project")  # Added ng_web_test_suite

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "grid_ui_pattern",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//:node_modules/@angular/core",
        "//src/cdk-experimental/ui-patterns/behaviors/event-manager",
        "//src/cdk-experimental/ui-patterns/behaviors/grid-focus",
        "//src/cdk-experimental/ui-patterns/behaviors/grid-navigation",
        "//src/cdk-experimental/ui-patterns/behaviors/signal-like",
        # Add other direct dependencies if GridCellWidgetPattern or GridCellPattern end up using them
    ],
)

ts_project(
    name = "unit_test_sources",
    testonly = True,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":grid_ui_pattern",
        "//:node_modules/@angular/core",
        "//src/cdk-experimental/ui-patterns/behaviors/grid-focus",  # For RowCol in spec
        "//src/cdk-experimental/ui-patterns/behaviors/signal-like",  # For SignalLike, WritableSignalLike in spec
        "//src/cdk/keycodes",  # Common testing dependency
        "//src/cdk/testing",  # For ModifierKeys
        "//src/cdk/testing/private",  # For createKeyboardEvent
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)
