load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "listbox",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//src/cdk-experimental/ui-patterns/event-manager",
        "//src/cdk-experimental/ui-patterns/list-focus",
        "//src/cdk-experimental/ui-patterns/list-navigation",
        "//src/cdk-experimental/ui-patterns/list-selection",
        "//src/cdk-experimental/ui-patterns/list-typeahead",
        "@npm//@angular/core",
    ],
)
