load("//tools:defaults.bzl", "ng_web_test_suite", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "toolbar",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//:node_modules/@angular/core",
        "//src/cdk-experimental/ui-patterns/behaviors/event-manager",
        "//src/cdk-experimental/ui-patterns/behaviors/list-focus",
        "//src/cdk-experimental/ui-patterns/behaviors/list-navigation",
        "//src/cdk-experimental/ui-patterns/behaviors/signal-like",
    ],
)

ts_project(
    name = "unit_test_sources",
    testonly = True,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":toolbar",
        "//:node_modules/@angular/core",
        # No direct import of //src/cdk/keycodes or //src/cdk/testing/private observed in toolbar.spec.ts
        # Add if needed based on test execution errors.
    ],
)

ng_web_test_suite(
    name = "unit_tests",
    deps = [":unit_test_sources"],
)
